Docs: add beginner's guide + reconcile ARCHITECTURE.md with Python port
- New "A Beginner's Guide" section: what the app does, flow + CSV-import
  diagrams, trading/metrics/ML/DB glossaries, a runnable walkthrough, how
  to read a result, known limitations, and where to start reading code.
- Reconcile the reference sections with the Java to Python port:
  - CSV import is the Python loader (per-year slicing, POST /api/imports);
    no Java `import` subcommand, no CsvDataImporter/ArchivePath.
  - nn-feedforward is a PyTorch model in python/nn/ behind a Java RPC
    client; drop DL4J, the Java ModelStore/FeatureStore, and the
    data/features feature cache; note version-pin is not yet forwarded.
  - Continuous aggregates dropped; document the on-demand /api/aggregate
    aggregator (new Multi-timeframe aggregation subsection).
  - Web layer: Node proxies write routes to the loader; remove the
    obsolete DL4J JVM-flags subsection.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>